--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Configuration files
+config.php
+ftpsync.settings
+
+# Search Console Verification File
+google*.html
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
